Change pages data and update gauge

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <h3>REMAINING TIME</h3>
                                     <div class="card-value">
                                         <span id="remaining-time">--</span>
-                                        <span class="unit">MIN</span>
+                                        <span class="unit">HOURS</span>
                                     </div>
                                     <div class="card-footer">
                                         <small>Based on current consumption</small>
